# appli_KBIS

./: .gitattributes  .gitignore  .htaccess  ACCES_SYSTEME_INTELLIGENT_RETRAITS.md  ACTIONS_RAPIDES_BAILLEUR_DEVELOPPEMENT.md  AMELIORATIONS_ACTIONS_RAPIDES.md  AMELIORATIONS_DASHBOARD_NAVIGATION.md  AMELIORATIONS_DETAIL_AVANCE.md  AMELIORATIONS_FORMULAIRE.md  AMELIORATIONS_FORMULAIRE_CONTRAT.md  AMELIORATIONS_GENERATION_PDF.md  AMELIORATIONS_MONITORING_AVANCES.md  AMELIORATIONS_RAPPORT_PDF_AVANCES.md  AMELIORATIONS_RECAPITULATIF_MENSUEL.md  AMELIORATION_AJOUT_UTILISATEUR_GROUPE.md  AMELIORATION_FORMULAIRE_PAIEMENT_AVANCES.md  AMELIORATION_IMPRESSION_DIRECTE_RECUS.md  AMELIORATION_MESSAGES_FORMULAIRES.md  AMELIORATION_PAGES_WEB.md  AMELIORATION_RECUS_CAUTION.md  AMELIORATION_RESPONSIVE.md  AMELIORATION_SECTION_RECU_PAIEMENTS.md  API_DOCUMENTATION.md  API_GESTION_CAUTIONS.md  CALCUL_AUTOMATIQUE_MOIS_REGLES_AVANCE.md  CHANGELOG.md  CONCURRENCY_FLOW.md  CONCURRENCY_TEST.md  CONFIDENTIALITE_MONTANTS_GLOBAUX.md  CONVERSION_MOIS_FRANCAIS_REÇU_AVANCE.md  CONVERSION_MOIS_FRANCAIS_TOUS_RECUS_AVANCE.md  CORRECTIONS_API_CAUTIONS.md  CORRECTIONS_FINALES_RETRAITS.md  CORRECTIONS_FORMULAIRE_CONTRAT.md  CORRECTIONS_URLS_ACTIONS_RAPIDES.md  CORRECTIONS_URLS_RECUS.md  CORRECTION_AFFICHAGE_PROPRIETES.md  CORRECTION_AFFICHAGE_PROPRIETES_DUPONT.md  CORRECTION_AVANCES_ACTIVES.md  CORRECTION_AVANCES_EPUISEES.md  (+944 more)
BACKUP_AVANT_MAJ_20251019_001723/: Procfile  README_SAUVEGARDE.txt  emergency_fix.py  requirements.txt
BD/: CHANGELOG.md  README.md  README_SQL.md  SCHEMA_AVANCES_INTELLIGENTES.sql  (+14 more)
(+1211 files in other folders)
