[tool.poetry]
name = "appli-kbis"
version = "0.1.0"
description = "Application de gestion immobilière KBIS"
authors = ["KBIS Team <contact@kbis.bf>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.7"
djangorestframework = "3.14.0"
django-filter = "23.5"
django-autocomplete-light = "3.9.1"
django-extensions = "3.2.3"
Pillow = "10.4.0"
reportlab = "4.0.7"
openpyxl = "3.1.2"
python-dateutil = "2.8.2"
django-crispy-forms = "2.1"
crispy-bootstrap5 = "0.7"
django-select2 = "8.1.0"
dj-database-url = "2.1.0"
psycopg = {extras = ["binary"], version = "3.1.18"}
gunicorn = "21.2.0"
whitenoise = "6.6.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
